2004-01-17  Eric Blake  <ebb9@byu.net>

	* src/op.h: Backport improvements from generics-branch. Better
	opcode dumping, and only compiled when needed. 
	* src/op.cpp: Ditto.
	* src/bytecode.h (EmitMethodInvocation, CompleteCall): Add
	need_value parameter and return stack effect.
	* src/bytecode.cpp: Adjust all callers.

2004-01-16  Eric Blake  <ebb9@byu.net>

	* src/body.cpp (ProcessThrowStatement): Fallout from yesterday -
	throwing null cannot make checked exception catch reachable.
	* src/expr.cpp (MoreSpecific): From Sun bug 4761586, no longer
	consider the declaring type when deciding method ambiguity.
	* src/error.cpp (InitializeMessages): Update error message wording
	accordingly.
	* NEWS: Document this.

2004-01-15  Eric Blake  <ebb9@byu.net>

	* src/semantic.h (CheckedException): From Java Spec Report, throw
	null is unchecked.
	* NEWS: Document this.

2004-01-14  Eric Blake  <ebb9@byu.net>

	* src/expr.cpp (ReportMethodNotFound): Improve error message when
	accessing interface.clone(); it regressed from 1.18.
	* src/config.h.in: Regenerate (missed checking this in yesterday).

2004-01-13  Eric Blake  <ebb9@byu.net>

	* src/m4/ac_check_error_discard_const.m4: Further autoconf fixes;
	again, use AC_LANG_PROGRAM instead of AC_LANG_SOURCE.
	* src/m4/ac_check_iconv.m4: Ditto.
	* src/m4/ac_check_wcs_funcs.m4: Ditto.
	* src/m4/ac_cxx_bool.m4: Ditto.
	* src/m4/ac_cxx_check_ostream_const_unsigned_char_ptr.m4: Ditto.
	* src/m4/ac_cxx_check_set_new_handler.m4: Ditto.
	* src/m4/ac_cxx_const_cast.m4: Ditto.
	* src/m4/ac_cxx_dynamic_cast.m4: Ditto.
	* src/m4/ac_cxx_explicit.m4: Ditto.
	* src/m4/ac_cxx_have_std.m4: Ditto.
	* src/m4/ac_cxx_member_constants.m4: Ditto.
	* src/m4/ac_cxx_namespaces.m4: Ditto.
	* src/m4/ac_cxx_reinterpret_cast.m4: Ditto.
	* src/m4/ac_cxx_rtti.m4: Ditto.
	* src/m4/ac_cxx_static_cast.m4: Ditto.
	* src/m4/ac_try_encoding.m4: Ditto.
	* src/m4/acx_check_pathname_style.m4: Ditto.
	* configure: Regenerate.

2004-01-10  Eric Blake  <ebb9@byu.net>
