@@ -3,8 +3,7 @@
 // This software is subject to the terms of the IBM Jikes Compiler
 // License Agreement available at the following URL:
 // http://ibm.com/developerworks/opensource/jikes.
-// Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002 International Business
-// Machines Corporation and others.  All Rights Reserved.
+// Copyright (C) 1996, 2004 IBM Corporation and others.  All Rights Reserved.
 // You must accept the terms of that agreement to use this software.
 //
 #ifndef class_INCLUDED
@@ -13,6 +12,7 @@
 #include "platform.h"
 #include "semantic.h"
 #include "access.h"
+#include "control.h"
 #include "tuple.h"
 #include "op.h"
 #include "option.h"
